--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Крестики - Нолики</title>
+  <title>Форма авторизации</title>
   <!-- <link rel="stylesheet" href="style.css"> -->
   <!-- Зачем это тут? -->
 
